# simple-debate-agents

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  ruff.toml  strategy_debate.py
docs/: architecture.md  strategic_debate_agent.md
notebooks/: graph_flow_check.py
src/agents/: __init__.py  against_agent.py  base_agent.py  favor_agent.py  judge_agent.py
src/graph/: debate_graph.py  strategic_debate_graph.py
src/models/: agent_config.py  debate_state.py
src/prompts/: action_prompts.py  agent_prompts.py  strategic_action_prompts.py
src/utils/: print_debate.py
